--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <th scope="col">Id</th>
             <th scope="col">User Id</th>
             <th scope="col">Title</th>
+            <th scope="col">Body</th>
           </tr>
         </thead>
         <tbody></tbody>
