--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="container w-50">
+    <div class="container">
       <table class="table table-bordered mt-5 table-sm">
         <thead class="table-dark">
           <tr>
