Create post and edit post

--- a/index.html
+++ b/index.html
@@ -13,13 +13,23 @@
     />
     <title>Document</title>
   </head>
+  <style>
+    a {
+      color: white;
+    }
+    a:hover {
+      color: white;
+    }
+  </style>
   <body>
     <div class="container">
-      <div class="smth"></div>
-      <table class="table table-bordered mt-5 table-sm">
-        <thead class="table-dark">
+      <button class="btn btn-primary mt-3">
+        <a href="./post/new.html">Create Post</a>
+      </button>
+      <table class="table table-bordered mt-3 table-hover">
+        <thead class="">
           <tr>
-            <th scope="col">Title</th>
+            <th scope="col" class="">Title</th>
           </tr>
         </thead>
         <tbody></tbody>
